--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,12 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
+# PWA
+/public/sw.js
+/public/sw.js.map
+/public/workbox-*.js
+/public/workbox-*.js.map
+
 /.agent/skills/
 /.claude/skills/
 /.gemini/skills/
