--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "nanoid": "^5.1.6",
     "next": "16.1.3",
     "next-auth": "^5.0.0-beta.30",
+    "next-pwa": "^5.6.0",
     "next-themes": "^0.4.6",
     "pg": "^8.17.1",
     "react": "19.2.3",
